Fixed a few issues with the dark mode.

--- a/src/Mapping/components/MainMap.css
+++ b/src/Mapping/components/MainMap.css
@@ -103,7 +103,7 @@
     flex-direction: column;
     gap: 20px;
     width: 100%;
-    background-color: white;
+    background-color: var(--foreground-color);
 }
 
 .filter-group {
